fix odd code mirror gutter placement during overflow

--- a/website/static/separate-css/playground.css
+++ b/website/static/separate-css/playground.css
@@ -145,6 +145,10 @@ pre.CodeMirror-placeholder {
   color: #888888;
 }
 
+.editors .CodeMirror-scroll {
+  position: static;
+}
+
 .bottom-bar {
   position: relative;
 }
